Fix prose adding (way too much) margin to paragraph blocks

--- a/src/app.css
+++ b/src/app.css
@@ -98,6 +98,11 @@
         text-decoration: inherit;
     }
 
+    .prose :not(.unprose) p, :root .prose > p {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
     ol,
     ul {
         @apply mb-12 list-inside;
